# ncnnPicVec

./: CMakeLists.txt  README.md
models/: mobileclip_s0_fp16.param
src/: Crop.cpp  Crop.h  MobileCLIPViT.cpp  MobileCLIPViT.h  demo_crop.cpp  demo_picdb.cpp  demo_vit.cpp  library.h
